--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>Portfolio | Lisa Voronov</title>
+    <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         @font-face {
             font-family: 'PP Neue Montreal';
