--- a/KAA.html
+++ b/KAA.html
@@ -199,8 +199,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="TRENDYOL">‹ Previous</a>
-                <a href="SPEEXX">Next ›</a>
+                <a href="TRENDYOL.html">‹ Previous</a>
+                <a href="SPEEXX.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -224,8 +224,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="TRENDYOL">‹ Previous</a>
-        <a href="SPEEXX">Next ›</a>
+        <a href="TRENDYOL.html">‹ Previous</a>
+        <a href="SPEEXX.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
