--- a/ILES FORMULA.html
+++ b/ILES FORMULA.html
@@ -184,8 +184,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="SIMPLIE">‹ Previous</a>
-                <a href="TRENDYOL">Next ›</a>
+                <a href="SIMPLIE.html">‹ Previous</a>
+                <a href="TRENDYOL.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -203,8 +203,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="SIMPLIE">‹ Previous</a>
-        <a href="TRENDYOL">Next ›</a>
+        <a href="SIMPLIE.html">‹ Previous</a>
+        <a href="TRENDYOL.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
