--- a/ME.html
+++ b/ME.html
@@ -205,8 +205,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="BASLER BEAUTY">‹ Previous</a>
-                <a href="SIMPLIE">Next ›</a>
+                <a href="BASLER BEAUTY.html">‹ Previous</a>
+                <a href="SIMPLIE.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -228,8 +228,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="BASLER BEAUTY">‹ Previous</a>
-        <a href="SIMPLIE">Next ›</a>
+        <a href="BASLER BEAUTY.html">‹ Previous</a>
+        <a href="SIMPLIE.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
