--- a/SPEEXX.html
+++ b/SPEEXX.html
@@ -224,8 +224,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="KAA">‹ Previous</a>
-                <a href="BASLER BEAUTY">Next ›</a>
+                <a href="KAA.html">‹ Previous</a>
+                <a href="BASLER BEAUTY.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -248,8 +248,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="KAA">‹ Previous</a>
-        <a href="BASLER BEAUTY">Next ›</a>
+        <a href="KAA.html">‹ Previous</a>
+        <a href="BASLER BEAUTY.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
