--- a/ME.html
+++ b/ME.html
@@ -8,6 +8,9 @@
     <meta name="googlebot" content="noindex, nofol, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>Lisa Voronov | Lisa Voronov</title>
+    <meta property="og:title" content="Lisa Voronov | Lisa Voronov">
+    <meta property="og:image" content="LV.png">
+    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         /* ... (шрифты оставляем без изменений) ... */
