--- a/SIMPLIE.html
+++ b/SIMPLIE.html
@@ -6,6 +6,9 @@
     <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>Simplie Hair | Lisa Voronov</title>
+    <meta property="og:title" content="Simplie Hair | Lisa Voronov">
+    <meta property="og:image" content="LV.png">
+    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         @font-face {
