--- a/SPEEXX.html
+++ b/SPEEXX.html
@@ -6,6 +6,9 @@
     <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>SPEEXX | Lisa Voronov</title>
+    <meta property="og:title" content="SPEEXX | Lisa Voronov">
+    <meta property="og:image" content="LV.png">
+    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         @font-face {
@@ -224,8 +227,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="KAA.html">‹ Previous</a>
-                <a href="BASLER BEAUTY.html">Next ›</a>
+                <a href="KAA">‹ Previous</a>
+                <a href="BASLER BEAUTY">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -248,8 +251,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="KAA.html">‹ Previous</a>
-        <a href="BASLER BEAUTY.html">Next ›</a>
+        <a href="KAA">‹ Previous</a>
+        <a href="BASLER BEAUTY">Next ›</a>
     </div>
 
     <div class="mobile-footer">
