--- a/BASLER BEAUTY.html
+++ b/BASLER BEAUTY.html
@@ -6,6 +6,9 @@
     <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>BASLER BEAUTY | Lisa Voronov</title>
+    <meta property="og:title" content="BASLER BEAUTY | Lisa Voronov">
+    <meta property="og:image" content="LV.png">
+    <meta property="og:type" content="website">
     <style>
         @font-face {
             font-family: 'Notbad Sans';
