--- a/ILES FORMULA.html
+++ b/ILES FORMULA.html
@@ -7,7 +7,7 @@
     <meta name="googlebot" content="noindex, nofollow">
     <title>ILES FORMULA | Lisa Voronov</title>
     <meta property="og:title" content="ILES FORMULA | Lisa Voronov">
-    <meta property="og:image" content="LV.png">
+    <meta property="og:image" content="https://lisavoronov.com/LV.png">
     <meta property="og:type" content="website">
     <style>
         @font-face {
@@ -174,7 +174,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html?p=2" class="back-link">← Back to portfolio</a>
+            <a href="portfolio.html?p=2" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">ILES FORMULA</span> is a luxury professional hair care brand founded by stylist Wendy Iles. 
                 <br><br>As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, 
