--- a/SIMPLIE.html
+++ b/SIMPLIE.html
@@ -6,9 +6,6 @@
     <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>Simplie Hair | Lisa Voronov</title>
-    <meta property="og:title" content="Simplie Hair | Lisa Voronov">
-    <meta property="og:image" content="LV.png">
-    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         @font-face {
@@ -185,7 +182,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html?p=1" class="back-link">← Back to portfolio</a>
+            <a href="portfolio.html?p=1" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">SIMPLIE HAIR</span> is a brand specializing in hair extensions and professional training for stylists. 
                 <br><br>As part of our collaboration, I was responsible for all of the brand's visual and print content: 
@@ -198,8 +195,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ME.html">‹ Previous</a>
-                <a href="ILES FORMULA.html">Next ›</a>
+                <a href="ME">‹ Previous</a>
+                <a href="ILES FORMULA">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -218,8 +215,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="ME.html">‹ Previous</a>
-        <a href="ILES FORMULA.html">Next ›</a>
+        <a href="ME">‹ Previous</a>
+        <a href="ILES FORMULA">Next ›</a>
     </div>
 
     <div class="mobile-footer">
