--- a/TRENDYOL.html
+++ b/TRENDYOL.html
@@ -6,9 +6,6 @@
     <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>TRENDYOL | Lisa Voronov</title>
-    <meta property="og:title" content="TRENDYOL | Lisa Voronov">
-    <meta property="og:image" content="LV.png">
-    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         /* ... (шрифты и базовые стили остаются те же) ... */
@@ -165,7 +162,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html?p=3" class="back-link">← Back to portfolio</a>
+            <a href="portfolio.html?p=3" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">TRENDYOL</span> is a leading Turkish e-commerce platform. 
                 <br><br>
@@ -175,8 +172,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ILES FORMULA.html">‹ Previous</a>
-                <a href="KAA.html">Next ›</a>
+                <a href="ILES FORMULA">‹ Previous</a>
+                <a href="KAA">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -200,8 +197,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="ILES FORMULA.html">‹ Previous</a>
-        <a href="KAA.html">Next ›</a>
+        <a href="ILES FORMULA">‹ Previous</a>
+        <a href="KAA">Next ›</a>
     </div>
 
     <div class="mobile-footer">
