--- a/SPEEXX.html
+++ b/SPEEXX.html
@@ -6,9 +6,6 @@
     <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>SPEEXX | Lisa Voronov</title>
-    <meta property="og:title" content="SPEEXX | Lisa Voronov">
-    <meta property="og:image" content="LV.png">
-    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         @font-face {
@@ -217,7 +214,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html?p=5" class="back-link">← Back to portfolio</a>
+            <a href="portfolio.html?p=5" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">SPEEXX</span> is an international platform for corporate training and language development. As part of this collaboration, I developed infographics with LinkedIn, design, collaborating with AI tools to visualize data and the creative process.
                 <br><br>
