--- a/project1.html
+++ b/project1.html
@@ -7,7 +7,7 @@
     <meta name="googlebot" content="noindex, nofollow">
     <title>Simplie Hair | Lisa Voronov</title>
     <meta property="og:title" content="Simplie Hair | Lisa Voronov">
-    <meta property="og:image" content="LV.png">
+    <meta property="og:image" content="https://lisavoronov.com/LV.png">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
@@ -185,7 +185,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html?p=1" class="back-link">← Back to portfolio</a>
+            <a href="portfolio.html?p=1" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">SIMPLIE HAIR</span> is a brand specializing in hair extensions and professional training for stylists. 
                 <br><br>As part of our collaboration, I was responsible for all of the brand's visual and print content: 
