--- a/project4.html
+++ b/project4.html
@@ -7,7 +7,7 @@
     <meta name="googlebot" content="noindex, nofollow">
     <title>KAA by Bill Kaulitz | Lisa Voronov</title>
     <meta property="og:title" content="KAA by Bill Kaulitz | Lisa Voronov">
-    <meta property="og:image" content="LV.png">
+    <meta property="og:image" content="https://lisavoronov.com/LV.png">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
@@ -191,7 +191,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html?p=4" class="back-link">← Back to portfolio</a>
+            <a href="portfolio.html?p=4" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">KAA by Bill Kaulitz</span> 
                is a perfume brand.
