--- a/project5.html
+++ b/project5.html
@@ -7,7 +7,7 @@
     <meta name="googlebot" content="noindex, nofollow">
     <title>SPEEXX | Lisa Voronov</title>
     <meta property="og:title" content="SPEEXX | Lisa Voronov">
-    <meta property="og:image" content="LV.png">
+    <meta property="og:image" content="https://lisavoronov.com/LV.png">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
@@ -217,7 +217,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html?p=5" class="back-link">← Back to portfolio</a>
+            <a href="portfolio.html?p=5" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">SPEEXX</span> is an international platform for corporate training and language development. As part of this collaboration, I developed infographics with LinkedIn, design, collaborating with AI tools to visualize data and the creative process.
                 <br><br>
