--- a/project6.html
+++ b/project6.html
@@ -7,7 +7,7 @@
     <meta name="googlebot" content="noindex, nofollow">
     <title>BASLER BEAUTY | Lisa Voronov</title>
     <meta property="og:title" content="BASLER BEAUTY | Lisa Voronov">
-    <meta property="og:image" content="LV.png">
+    <meta property="og:image" content="https://lisavoronov.com/LV.png">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
@@ -184,7 +184,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html?p=6" class="back-link">← Back to portfolio</a>
+            <a href="portfolio.html?p=6" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">BASLER BEAUTY</span> is a retailer of cosmetics and skin and hair care products. 
                 <br><br>As part of a long-term collaboration, I was responsible for product photography for the brand's official social media accounts, including styling, shooting, and post-production of images in accordance with the company's visual guidelines. My work ensured a consistent, recognizable visual style and high-quality content across all publications.
