--- a/project7.html
+++ b/project7.html
@@ -9,7 +9,7 @@
     <meta name="googlebot" content="noindex, nofollow">
     <title>Lisa Voronov | Lisa Voronov</title>
     <meta property="og:title" content="Lisa Voronov | Lisa Voronov">
-    <meta property="og:image" content="LV.png">
+    <meta property="og:image" content="https://lisavoronov.com/LV.png">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
@@ -193,7 +193,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html?p=7" class="back-link">← Back to portfolio</a>
+            <a href="portfolio.html?p=7" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">Lisa Voronov</span> 
                 that's me. I am a graphic designer with extensive experience in digital and print media. 
