--- a/project2.html
+++ b/project2.html
@@ -175,7 +175,7 @@
 
     <div class="info-side">
         <div>
-            <a href="portfolio.html?p=2" class="back-link">← Back to portfolio</a>
+            <a href="index.html?p=2" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">ILES FORMULA</span> is a luxury professional hair care brand founded by stylist Wendy Iles. 
                 <br><br>As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, 
