--- a/TRENDYOL.html
+++ b/TRENDYOL.html
@@ -162,7 +162,7 @@
 
     <div class="info-side">
         <div>
-            <a href="portfolio.html?p=3" class="back-link">← Back to portfolio</a>
+            <a href="index.html?p=3" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">TRENDYOL</span> is a leading Turkish e-commerce platform. 
                 <br><br>
