--- a/project1.html
+++ b/project1.html
@@ -185,7 +185,7 @@
 
     <div class="info-side">
         <div>
-            <a href="portfolio.html?p=1" class="back-link">← Back to portfolio</a>
+            <a href="index.html?p=1" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">SIMPLIE HAIR</span> is a brand specializing in hair extensions and professional training for stylists. 
                 <br><br>As part of our collaboration, I was responsible for all of the brand's visual and print content: 
