--- a/project4.html
+++ b/project4.html
@@ -191,7 +191,7 @@
 
     <div class="info-side">
         <div>
-            <a href="portfolio.html?p=4" class="back-link">← Back to portfolio</a>
+            <a href="index.html?p=4" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">KAA by Bill Kaulitz</span> 
                is a perfume brand.
