--- a/project6.html
+++ b/project6.html
@@ -184,7 +184,7 @@
 
     <div class="info-side">
         <div>
-            <a href="portfolio.html?p=6" class="back-link">← Back to portfolio</a>
+            <a href="index.html?p=6" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">BASLER BEAUTY</span> is a retailer of cosmetics and skin and hair care products. 
                 <br><br>As part of a long-term collaboration, I was responsible for product photography for the brand's official social media accounts, including styling, shooting, and post-production of images in accordance with the company's visual guidelines. My work ensured a consistent, recognizable visual style and high-quality content across all publications.
