--- a/project7.html
+++ b/project7.html
@@ -193,7 +193,7 @@
 
     <div class="info-side">
         <div>
-            <a href="portfolio.html?p=7" class="back-link">← Back to portfolio</a>
+            <a href="index.html?p=7" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">Lisa Voronov</span> 
                 that's me. I am a graphic designer with extensive experience in digital and print media. 
