--- a/project1.html
+++ b/project1.html
@@ -199,7 +199,7 @@
         <div class="left-footer">
             <div class="nav-arrows">
                 <a href="ME.html">‹ Previous</a>
-                <a href="ILES FORMULA.html">Next ›</a>
+                <a href="ILES-FORMULA.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -219,7 +219,7 @@
 
     <div class="nav-arrows mobile-nav">
         <a href="ME.html">‹ Previous</a>
-        <a href="ILES FORMULA.html">Next ›</a>
+        <a href="ILES-FORMULA.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
