--- a/project5.html
+++ b/project5.html
@@ -228,7 +228,7 @@
         <div class="left-footer">
             <div class="nav-arrows">
                 <a href="KAA.html">‹ Previous</a>
-                <a href="BASLER BEAUTY.html">Next ›</a>
+                <a href="BASLER-BEAUTY.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -252,7 +252,7 @@
 
     <div class="nav-arrows mobile-nav">
         <a href="KAA.html">‹ Previous</a>
-        <a href="BASLER BEAUTY.html">Next ›</a>
+        <a href="BASLER-BEAUTY.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
