--- a/SIMPLIE.html
+++ b/SIMPLIE.html
@@ -195,8 +195,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ME">‹ Previous</a>
-                <a href="ILES FORMULA">Next ›</a>
+                <a href="ME.html">‹ Previous</a>
+                <a href="ILES-FORMULA.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -215,8 +215,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="ME">‹ Previous</a>
-        <a href="ILES FORMULA">Next ›</a>
+        <a href="ME.html">‹ Previous</a>
+        <a href="ILES-FORMULA.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
