--- a/TRENDYOL.html
+++ b/TRENDYOL.html
@@ -172,8 +172,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ILES FORMULA">‹ Previous</a>
-                <a href="KAA">Next ›</a>
+                <a href="ILES-FORMULA.html">‹ Previous</a>
+                <a href="KAA.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -197,8 +197,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="ILES FORMULA">‹ Previous</a>
-        <a href="KAA">Next ›</a>
+        <a href="ILES-FORMULA.html">‹ Previous</a>
+        <a href="KAA.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
