--- a/project3.html
+++ b/project3.html
@@ -175,7 +175,7 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ILES FORMULA.html">‹ Previous</a>
+                <a href="ILES-FORMULA.html">‹ Previous</a>
                 <a href="KAA.html">Next ›</a>
             </div>
 
@@ -200,7 +200,7 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="ILES FORMULA.html">‹ Previous</a>
+        <a href="ILES-FORMULA.html">‹ Previous</a>
         <a href="KAA.html">Next ›</a>
     </div>
 
