--- a/project7.html
+++ b/project7.html
@@ -208,7 +208,7 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="BASLER BEAUTY.html">‹ Previous</a>
+                <a href="BASLER-BEAUTY.html">‹ Previous</a>
                 <a href="SIMPLIE.html">Next ›</a>
             </div>
 
@@ -231,7 +231,7 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="BASLER BEAUTY.html">‹ Previous</a>
+        <a href="BASLER-BEAUTY.html">‹ Previous</a>
         <a href="SIMPLIE.html">Next ›</a>
     </div>
 
