--- a/ME.html
+++ b/ME.html
@@ -144,10 +144,19 @@
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 40px 20px;
+                padding: 0 20px 40px;
             }
             .right-side {
                 display: none;
+            }
+            .back-link {
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                display: block;
+                background: #ffffff;
+                padding: 40px 0 20px 0;
+                z-index: 100;
             }
             .mobile-gallery {
                 display: flex;
@@ -185,7 +194,10 @@
                 color: #0D0D0D;
                 text-decoration: none;
             }
-            .description { text-align: left; }
+            .description { 
+                text-align: left; 
+                margin-top: 20px;
+            }
         }
     </style>
 </head>
