--- a/SPEEXX.html
+++ b/SPEEXX.html
@@ -162,7 +162,7 @@
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 40px 20px;
+                padding: 0 20px 40px;
             }
             .scroll-wrapper {
                 width: 100%;
@@ -170,6 +170,15 @@
                 height: auto;
                 overflow: visible;
                 display: block;
+            }
+            .back-link {
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                display: block;
+                background: #ffffff;
+                padding: 40px 0 20px 0;
+                z-index: 100;
             }
             .content-side {
                 display: flex;
@@ -206,7 +215,10 @@
                 color: #0D0D0D;
                 text-decoration: none;
             }
-            .description { text-align: left; }
+            .description { 
+                text-align: left; 
+                margin-top: 20px;
+            }
         }
     </style>
 </head>
