--- a/simplie.html
+++ b/simplie.html
@@ -207,8 +207,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ME.html">‹ Previous</a>
-                <a href="ILES-FORMULA.html">Next ›</a>
+                <a href="me.html">‹ Previous</a>
+                <a href="iles-formula.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -227,8 +227,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="ME.html">‹ Previous</a>
-        <a href="ILES-FORMULA.html">Next ›</a>
+        <a href="me.html">‹ Previous</a>
+        <a href="iles-formula.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
