--- a/basler-beauty.html
+++ b/basler-beauty.html
@@ -204,8 +204,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="SPEEXX.html">‹ Previous</a>
-                <a href="ME.html">Next ›</a>
+                <a href="speexx.html">‹ Previous</a>
+                <a href="me.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -223,8 +223,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="SPEEXX.html">‹ Previous</a>
-        <a href="ME.html">Next ›</a>
+        <a href="speexx.html">‹ Previous</a>
+        <a href="me.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
