--- a/iles-formula.html
+++ b/iles-formula.html
@@ -199,8 +199,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="SIMPLIE.html">‹ Previous</a>
-                <a href="TRENDYOL.html">Next ›</a>
+                <a href="simplie.html">‹ Previous</a>
+                <a href="trendyol.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -218,8 +218,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="SIMPLIE.html">‹ Previous</a>
-        <a href="TRENDYOL.html">Next ›</a>
+        <a href="simplie.html">‹ Previous</a>
+        <a href="trendyol.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
