--- a/me.html
+++ b/me.html
@@ -220,8 +220,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="BASLER-BEAUTY.html">‹ Previous</a>
-                <a href="SIMPLIE.html">Next ›</a>
+                <a href="basler-beauty.html">‹ Previous</a>
+                <a href="simplie.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -243,8 +243,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="BASLER-BEAUTY.html">‹ Previous</a>
-        <a href="SIMPLIE.html">Next ›</a>
+        <a href="basler-beauty.html">‹ Previous</a>
+        <a href="simplie.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
