--- a/project2.html
+++ b/project2.html
@@ -188,8 +188,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="SIMPLIE.html">‹ Previous</a>
-                <a href="TRENDYOL.html">Next ›</a>
+                <a href="simplie.html">‹ Previous</a>
+                <a href="trendyol.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -207,8 +207,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="SIMPLIE.html">‹ Previous</a>
-        <a href="TRENDYOL.html">Next ›</a>
+        <a href="simplie.html">‹ Previous</a>
+        <a href="trendyol.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
