--- a/project3.html
+++ b/project3.html
@@ -175,8 +175,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ILES-FORMULA.html">‹ Previous</a>
-                <a href="KAA.html">Next ›</a>
+                <a href="iles-formula.html">‹ Previous</a>
+                <a href="kaa.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -200,8 +200,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="ILES-FORMULA.html">‹ Previous</a>
-        <a href="KAA.html">Next ›</a>
+        <a href="iles-formula.html">‹ Previous</a>
+        <a href="kaa.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
