--- a/project4.html
+++ b/project4.html
@@ -202,8 +202,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="TRENDYOL.html">‹ Previous</a>
-                <a href="SPEEXX.html">Next ›</a>
+                <a href="trendyol.html">‹ Previous</a>
+                <a href="speexx.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -227,8 +227,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="TRENDYOL.html">‹ Previous</a>
-        <a href="SPEEXX.html">Next ›</a>
+        <a href="trendyol.html">‹ Previous</a>
+        <a href="speexx.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
