--- a/project5.html
+++ b/project5.html
@@ -227,8 +227,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="KAA.html">‹ Previous</a>
-                <a href="BASLER-BEAUTY.html">Next ›</a>
+                <a href="kaa.html">‹ Previous</a>
+                <a href="basler-beauty.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -251,8 +251,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="KAA.html">‹ Previous</a>
-        <a href="BASLER-BEAUTY.html">Next ›</a>
+        <a href="kaa.html">‹ Previous</a>
+        <a href="basler-beauty.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
