--- a/project7.html
+++ b/project7.html
@@ -208,8 +208,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="BASLER-BEAUTY.html">‹ Previous</a>
-                <a href="SIMPLIE.html">Next ›</a>
+                <a href="basler-beauty.html">‹ Previous</a>
+                <a href="simplie.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -231,8 +231,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="BASLER-BEAUTY.html">‹ Previous</a>
-        <a href="SIMPLIE.html">Next ›</a>
+        <a href="basler-beauty.html">‹ Previous</a>
+        <a href="simplie.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
