--- a/speexx.html
+++ b/speexx.html
@@ -236,8 +236,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="KAA.html">‹ Previous</a>
-                <a href="BASLER-BEAUTY.html">Next ›</a>
+                <a href="kaa.html">‹ Previous</a>
+                <a href="basler-beauty.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -260,8 +260,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="KAA.html">‹ Previous</a>
-        <a href="BASLER-BEAUTY.html">Next ›</a>
+        <a href="kaa.html">‹ Previous</a>
+        <a href="basler-beauty.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
