--- a/trendyol.html
+++ b/trendyol.html
@@ -184,8 +184,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ILES-FORMULA.html">‹ Previous</a>
-                <a href="KAA.html">Next ›</a>
+                <a href="iles-formula.html">‹ Previous</a>
+                <a href="kaa.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -209,8 +209,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="ILES-FORMULA.html">‹ Previous</a>
-        <a href="KAA.html">Next ›</a>
+        <a href="iles-formula.html">‹ Previous</a>
+        <a href="kaa.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
